# ut325f-rs

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
examples/: discover.rs
src/: decoder.rs  error.rs  lib.rs  meter.rs  reading.rs  utils.rs
src/transport/: bluebus.rs  btleplug.rs  mod.rs  serial.rs
