[package]
name = "ut325f-rs"
version = "0.9.0"
authors = ["Christopher Hoover <ch@murgatroid.com>"]
description = "USB relay support"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/charlieh0tel/ut325f-rs"
keywords = ["usb", "thermocouple", "measurement"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
anyhow = "1.0.98"
clap = "4.5.36"
clap_derive = "4.5.32"
tokio = { version = "1.44.2", features = ["full"]}
tokio-serial = "5.4.5"
