[package]
name = "ut325f-rs"
version = "0.9.3"
authors = ["Christopher Hoover <ch@murgatroid.com>"]
description = "Support for Uni-T UT325-F thermocouple meter"
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/charlieh0tel/ut325f-rs"
keywords = ["usb", "thermocouple", "measurement"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
anyhow = "1.0.98"
clap = "4.5.36"
clap_derive = "4.5.32"
tokio = { version = "1.44.2", features = ["full"]}
tokio-serial = "5.4.5"
